--- a/Rule/Proxy.yaml
+++ b/Rule/Proxy.yaml
@@ -433,4 +433,5 @@ payload:
   - DOMAIN-SUFFIX,yimg.com,Proxy
   - DOMAIN,api.steampowered.com,Proxy
   - DOMAIN,store.steampowered.com,Proxy
-  - DOMAIN,dev.to,Proxy
+  - DOMAIN-SUFFIX,dev.to,Proxy
+  - DOMAIN-SUFFIX,medium.com,Proxy
