--- a/Rule/China.yaml
+++ b/Rule/China.yaml
@@ -574,4 +574,4 @@ payload:
   - DOMAIN-KEYWORD,officecdn
   - DOMAIN-KEYWORD,taobao
   - DOMAIN-SUFFIX,dm0.cc
-  - DOMAIN-SUFFIX,npmmirror.com
+  - DOMAIN-SUFFIX,registry.npmmirror.com
