--- a/Rule/China.yaml
+++ b/Rule/China.yaml
@@ -575,3 +575,4 @@ payload:
   - DOMAIN-KEYWORD,taobao
   - DOMAIN-SUFFIX,dm0.cc
   - DOMAIN-SUFFIX,registry.npmmirror.com
+  - DOMAIN-SUFFIX,cwiki.yunify.com
