--- a/Rule/China.yaml
+++ b/Rule/China.yaml
@@ -1,5 +1,6 @@
 # NAME: China
 payload:
+  - DOMAIN,cwiki.yunify.com
   - DOMAIN,analytics.strava.com
   - DOMAIN,blzddist1-a.akamaihd.net
   - DOMAIN,cdn.angruo.com
@@ -575,4 +576,3 @@ payload:
   - DOMAIN-KEYWORD,taobao
   - DOMAIN-SUFFIX,dm0.cc
   - DOMAIN-SUFFIX,registry.npmmirror.com
-  - DOMAIN-SUFFIX,cwiki.yunify.com
